[FIX] bg-contact color & gap social_links

--- a/style.css
+++ b/style.css
@@ -1283,7 +1283,7 @@ font-size: 1.2rem;
     max-width: 900px;
     margin: 68px auto;
     margin-bottom: 0px;
-    background: #fff;
+    background: #f3f3f3;
     border-radius: 3px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
     padding: 32px;
@@ -1362,7 +1362,7 @@ font-size: 1.2rem;
     margin-bottom: 30px;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 18px;
 }
 
 .social__links a {
